# harpoon-poc-edition

./: API_KEYS_SETUP.md  BEFORE_AFTER_COMPARISON.md  CLOUDFLARE_DO_SETUP.md  Cargo.toml  DELEGATION_RESTORED.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_VERIFIED.md  DO_BINDING_INSTRUCTIONS.md  DO_SETUP_INSTRUCTIONS.md  DURABLE_OBJECTS_SETUP.md  DURABLE_OBJECTS_SUCCESS.md  Dockerfile  Dockerfile.monorepo  FINAL_DEPLOYMENT.md  FINAL_SETUP_REQUIRED.md  FIX_SUMMARY.md  FORGE_BRIDGE_STARTER.md  FORGE_HARPOON_INTEGRATION.md  HARPOON_RUST_INTEGRATION_PLAN.md  HONEST_POSITIONING.md  HOSTED_AI_PRESENTATION.md  LATEST_DEPLOYMENT.md  LICENSE  LICENSE-APACHE  LICENSE-COMMERCIAL  LICENSE-CUSTOM  LICENSE-MIT  MEETING_READY.md  PHASE2.5_COMPLETE.md  PHASE3_FULL_COMPLETE.md  PHASE3_UI_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_SUMMARY.md  PHASE4_VERIFICATION.md  PRODUCTION_READY.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  RAINBOW_COVENANT.md  (+22 more)
configs/: README.md  compliance.yaml  config.example.yaml  docker-compose.poc.yml  docker-compose.yml  homeskillet.yaml  models.yaml  prometheus.yml  qoq.manifest.json  qoq.manifest.schema.json  quantized-models.yaml
crates/harpoon-core/: Cargo.toml  README.md
crates/harpoon-core/src/: lib.rs
crates/harpoon_bridge/: Cargo.toml  README.md
crates/harpoon_bridge/src/: covenant.rs  fusion.rs  lib.rs  strike.rs
crates/orchestrator/: Cargo.toml  README.md
crates/orchestrator/src/: config.rs  hosted_ai.rs  lib.rs  metrics.rs  server.rs  tenant.rs  types.rs
crates/orchestrator/tests/: hosted_ai_integration.rs
crates/resources/: Cargo.toml  README.md
crates/resources/src/: lib.rs  prompts.rs  sampling.rs  schemas.rs  tools.rs
crates/resources/src/prompts/: agent.rs  covenant.rs  fusion.rs  strike.rs
crates/resources/src/schemas/: agent.rs  covenant.rs  fusion.rs  strike.rs
crates/resources/src/tools/: covenant.rs  fusion.rs  github.rs  mlx.rs
crates/service/: Cargo.toml  README.md
crates/service/src/: config.rs  main.rs  mock_engine.rs
crates/service/src/auth/: github_oauth.rs
docs/: index.md
docs/hosted-ai-poc/: HOSTED_AI_README.md  INDEX.md  README.md  billing-implementation-plan.md  enterprise-compliance-formalization.md  multi-tenant-architecture.md  poc-README.md  poc-architecture.md  poc-email.md  poc-validation-summary.md
public/: app.js  hosted-ai-presentation.html  index.html  styles.css
reports/analysis/: README.md  call_graph.md  codebase_analysis.json
src/: ai-client-unified.ts  ai-client.ts  index.tsx  index_new.tsx  models.ts  router.ts  types.ts  worker.ts
src/agents/: MediatorAgent.ts  OrchestratorAgent.ts  mediator-agent.ts  orchestrator-agent.ts  types.ts
src/orchestration/: patterns.ts
