[workspace]
members = [
    "crates/orchestrator",
    "crates/service",
    "crates/harpoon-core",
    "crates/harpoon_bridge",
    "crates/resources",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Homeskillet-oa4 <noreply@example.com>"]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
once_cell = "1.19"
thiserror = "1.0"
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
# WASM host (optional): only used by orchestrator if feature 'wasm-host' is enabled
wasmtime = { version = "19" }
wasmtime-wasi = { version = "19" }
# PyO3 - NO workspace features, each crate configures its own
pyo3 = { version = "0.22" }
# Config
config = "0.14"
toml = "0.8"
# Time
chrono = { version = "0.4", features = ["serde"] }
