[package]
name = "harpoon_bridge"
version.workspace = true
edition.workspace = true
license = "SEE LICENSE-CUSTOM"
authors = ["Prompted365 and Contributors"]
description = "Bridge between Harpoon fusion system and orchestration layer"
repository = "https://github.com/prompted365/homeskillet-csl"
documentation = "https://docs.prompted365.com/harpoon-bridge"

[dependencies]
orchestrator = { path = "../orchestrator" }
harpoon-core = { path = "../harpoon-core", default-features = false }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
uuid.workspace = true
once_cell.workspace = true
sha3 = "0.10"
base64 = "0.22"
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }