[package]
name = "orchestrator"
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Prompted365 and Contributors"]
description = "Core orchestration engine for routing AI inference requests"
repository = "https://github.com/prompted365/homeskillet-csl"
documentation = "https://docs.rs/orchestrator"
readme = "README.md"
keywords = ["ai", "orchestration", "inference", "routing", "mlx"]
categories = ["algorithms", "asynchronous", "network-programming"]

[features]
default = []
wasm-host = ["dep:wasmtime", "dep:wasmtime-wasi"]
# pymlx = ["dep:engine_pymlx"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
# Configuration
serde_yaml = "0.9"
# Metrics
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
# Web server
axum = { version = "0.6", features = ["json", "tokio"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace", "timeout"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = "0.14"
# Optional WASM host
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }

# engine_pymlx = { path = "../engine_pymlx", optional = true }

[[bin]]
name = "homeskillet-orchestrator"
path = "src/bin/homeskillet-orchestrator.rs"

[dev-dependencies]
axum-test = "14.0"
futures = "0.3"
