[package]
name = "service"
edition = "2021"
version = "0.1.0"
license = "SEE LICENSE-CUSTOM"
authors = ["Prompted365 and Contributors"]
description = "HTTP service for the Homeskillet orchestration platform"
repository = "https://github.com/prompted365/homeskillet-csl"
documentation = "https://docs.prompted365.com/service"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
orchestrator = { path = "../orchestrator" }
harpoon_bridge = { path = "../harpoon_bridge" }
config = { workspace = true }
dotenvy = "0.15"

dirs-next = "2.0"
